kustomize/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: demo-app
